src/objects/BMCServiceDesk__Service_Target__c.object
<CustomObject>
    <description>This object allows you to store data for service targets.</description>
    <fields>
        <fullName>BMCServiceDesk__Applies_To__c</fullName>
        <defaultValue>&quot;Incident__c&quot;</defaultValue>
        <inlineHelpText>Select the object to which the service target is applied.</inlineHelpText>
        <label>Applies To</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BusinessDays__c</fullName>
        <inlineHelpText>Set the target time of completing the service in business days.</inlineHelpText>
        <label>Business Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA__c</fullName>
        <label>SLA</label>
        <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
        <relationshipLabel>Service Targets</relationshipLabel>
        <relationshipName>Service_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSupport_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the business support hours for the service.</inlineHelpText>
        <label>Support Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pause_Clock_Advanced_Expression__c</fullName>
        <label>Pause Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Postfix_Pause_Clock_Advanced_Expression__c</fullName>
        <label>Postfix Pause Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Postfix_ST_Criteria_Advanced_Expression__c</fullName>
        <label>Postfix ST Criteria Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Postfix_Start_Clock_Advanced_Expression__c</fullName>
        <label>Postfix Start Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Postfix_Stop_Clock_Advanced_Expression__c</fullName>
        <label>Postfix Stop Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ST_Criteria_Advanced_Expression__c</fullName>
        <label>ST Criteria Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Target_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Target_Title__c</fullName>
        <label>Service Target Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Start_Clock_Advanced_Expression__c</fullName>
        <label>Start Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Stop_Clock_Advanced_Expression__c</fullName>
        <label>Stop Clock Advanced Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetTypeValue__c</fullName>
        <description>This field derives the value from custom label based on value in Target Type field.</description>
        <formula>IF(LOWER(BMCServiceDesk__Target_Type__c)==&apos;resolutiontime&apos;, $Label.bmcservicedesk__resolutiontime,
IF(LOWER(BMCServiceDesk__Target_Type__c)==&apos;initiationtime&apos;, $Label.bmcservicedesk__initiationtime,
IF(LOWER(BMCServiceDesk__Target_Type__c)==&apos;responsetime&apos;, $Label.bmcservicedesk__responsetime,
IF(LOWER(BMCServiceDesk__Target_Type__c)==&apos;completiontime&apos;, $Label.bmcservicedesk__completiontime,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Type~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Target_Type__c</fullName>
        <inlineHelpText>Select the type of service target.</inlineHelpText>
        <label>Target Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Target__c</fullName>
        <inlineHelpText>Set the target time of completing the service in days, hours, and minutes.</inlineHelpText>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Use_Account_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Override the service target support hours with the client&apos;s account support hours</inlineHelpText>
        <label>Use Account Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Target</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Target #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>